<resources>
    <string name="app_name">Green Vendors</string>
    <string name="kindly_input_your_phone_number" />
    <string name="kindly_enter_verification_code_here" />
    <string name="log_in" />
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="dash_board">Dash board</string>
    <string name="register">Register</string>
    <string name="already_registered_log_in">Already registered, Log in</string>
    <string name="todo">TODO</string>
    <string name="providers_of_organic_veges">Providers of Organic Veges</string>
    <string name="welcome_to_green_vendors">Welcome to Green Vendors</string>
    <!--<string name="todo">TODO</string>-->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total_ksh">Total Ksh   =</string>
    <string name="anotherzero">0</string>


</resources>
