<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kunde">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/home"
        android:layout_centerInParent="true"
        android:id="@+id/image"
        android:contentDescription="@string/todo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:layout_marginTop="50sp"
        android:layout_below="@+id/image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50sp"
        android:id="@+id/plus"
        android:layout_marginStart="50sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50sp"
        android:layout_below="@id/image"
        android:layout_marginTop="70sp"
        android:layout_marginLeft="50sp"
        android:layout_marginEnd="50sp"
        android:layout_marginRight="50sp"
        android:layout_marginBottom="50sp"
        android:text="@string/zero" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/text"
        android:layout_alignRight="@id/text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/image"
        android:layout_marginRight="2dp"
        android:layout_marginEnd="50sp"
        android:layout_marginTop="50sp"
        android:id="@+id/minus"
        android:text="@string/minus"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:text="@string/add_to_cart"
        android:id="@+id/cart"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150sp"
        android:layout_centerHorizontal="true"
        android:text="@string/anotherzero"
        android:id="@+id/amount"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150sp"
        android:layout_toLeftOf="@+id/amount"
        android:layout_toStartOf="@id/amount"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="100sp"
        android:text="@string/total_ksh"/>





</RelativeLayout>